--- a/tox.ini
+++ b/tox.ini
@@ -17,8 +17,8 @@ deps =
     black
 commands =
     isort --check-only --diff src/ tests/ 
-    black --check --diff src/ tests/
-
+    black --line-length 80 --check --diff src/ tests/ 
+    
 #Falke8 is a tool that enforces PEP8 style guide
 [testenv:py{312}-flake8] 
 skip_install = true
@@ -38,7 +38,7 @@ deps =
     black
 commands =
     isort src/ tests/
-    black src/ tests/
+    black --line-length 80 src/ tests/
 
 [pytest]
 pythonpath = src
